<resources>
    <string name="app_name">One17</string>
    <string name="EmployeeName">Name</string>
    <string name="EmployeeEmail">Email</string>
    <string name="EmployeeMobile">Mobile</string>
    <string name="EmployeeId">Employee Id</string>
    <string name="EmployeeDoj">Date of join</string>
    <string name="EmployeeDeg">Designation</string>
    <string name="SubmitBtn">Submit</string>
    <string name="Register">Register</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_manage_call">Manage Call</string>
    <string name="menu_show_all">Show All</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_assign_task">Assign Task</string>
    <string name="menu_employee_detail">Employee Detail</string>
    <string name="menu_employee_task">Employee Task</string>

    <string name="today">Today</string>
    <string name="todo">Todo</string>
    <string name="inProgress">Progress</string>
    <string name="completed">Completed</string>
    <string name="overdue">Overdue</string>

    <string-array name="Priority">
        <item>Urgent</item>
        <item >High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="TaskCurrentStatus">
        <item>Todo</item>
        <item>InProgress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="TaskFinalState">
        <item>On Time</item>
        <item>Early</item>
        <item>Late</item>
    </string-array>

</resources>